// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Player (no items or power) => renders correctly 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Object {
          "backgroundColor": "#329932",
          "borderColor": "#329932",
          "borderRadius": 0,
          "borderWidth": 0.5,
          "flex": 1,
          "flexDirection": "column",
          "height": 120,
          "marginBottom": 7,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Image
          source={1}
          style={
            Object {
              "backgroundColor": "#141313",
              "borderColor": "black",
              "borderRadius": 0,
              "borderWidth": 1,
              "flex": 1,
              "height": 28,
              "margin": 1,
              "resizeMode": "stretch",
              "width": 10,
            }
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#0e0e0e",
              "flex": 9,
              "fontFamily": "telegrama_raw",
              "paddingRight": 30,
              "paddingTop": 6,
              "textAlign": "center",
            }
          }
        >
          Aram
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#141313",
            "borderColor": "#141313",
            "borderRadius": 0,
            "borderWidth": 0.5,
            "flex": 3,
            "flexDirection": "column",
            "margin": 1,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 16,
                  "margin": 4,
                  "width": 16,
                }
              }
            />
            <Image
              source={1}
              style={
                Object {
                  "height": 16,
                  "margin": 4,
                  "width": 16,
                }
              }
            />
            <Image
              source={1}
              style={
                Object {
                  "height": 16,
                  "margin": 4,
                  "width": 16,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 16,
                  "margin": 4,
                  "width": 16,
                }
              }
            />
            <Image
              source={1}
              style={
                Object {
                  "height": 16,
                  "margin": 4,
                  "width": 16,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#329932",
                  "flex": 1,
                  "flexDirection": "row",
                  "fontFamily": "telegrama_raw",
                  "fontSize": 8,
                  "marginTop": 20,
                }
              }
            >
              Artifacts: 
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#329932",
                  "flex": 1,
                  "flexDirection": "row",
                  "fontFamily": "telegrama_raw",
                  "fontSize": 8,
                  "marginTop": 20,
                }
              }
            >
              0
              /7
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Player (with items and no power) => renders correctly 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Object {
          "backgroundColor": "#329932",
          "borderColor": "#329932",
          "borderRadius": 0,
          "borderWidth": 0.5,
          "flex": 1,
          "flexDirection": "column",
          "height": 120,
          "marginBottom": 7,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Image
          source={1}
          style={
            Object {
              "backgroundColor": "#141313",
              "borderColor": "black",
              "borderRadius": 0,
              "borderWidth": 1,
              "flex": 1,
              "height": 28,
              "margin": 1,
              "resizeMode": "stretch",
              "width": 10,
            }
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#0e0e0e",
              "flex": 9,
              "fontFamily": "telegrama_raw",
              "paddingRight": 30,
              "paddingTop": 6,
              "textAlign": "center",
            }
          }
        >
          Tom
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#141313",
            "borderColor": "#141313",
            "borderRadius": 0,
            "borderWidth": 0.5,
            "flex": 3,
            "flexDirection": "column",
            "margin": 1,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 16,
                  "margin": 4,
                  "width": 16,
                }
              }
            />
            <Image
              source={1}
              style={
                Object {
                  "height": 16,
                  "margin": 4,
                  "width": 16,
                }
              }
            />
            <Image
              source={1}
              style={
                Object {
                  "height": 16,
                  "margin": 4,
                  "width": 16,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 16,
                  "margin": 4,
                  "width": 16,
                }
              }
            />
            <Image
              source={1}
              style={
                Object {
                  "height": 16,
                  "margin": 4,
                  "width": 16,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#329932",
                  "flex": 1,
                  "flexDirection": "row",
                  "fontFamily": "telegrama_raw",
                  "fontSize": 8,
                  "marginTop": 20,
                }
              }
            >
              Artifacts: 
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#329932",
                  "flex": 1,
                  "flexDirection": "row",
                  "fontFamily": "telegrama_raw",
                  "fontSize": 8,
                  "marginTop": 20,
                }
              }
            >
              4
              /7
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Player (with items and power) => renders correctly 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Object {
          "backgroundColor": "#329932",
          "borderColor": "#329932",
          "borderRadius": 0,
          "borderWidth": 0.5,
          "flex": 1,
          "flexDirection": "column",
          "height": 120,
          "marginBottom": 7,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Image
          source={1}
          style={
            Object {
              "backgroundColor": "#141313",
              "borderColor": "black",
              "borderRadius": 0,
              "borderWidth": 1,
              "flex": 1,
              "height": 28,
              "margin": 1,
              "resizeMode": "stretch",
              "width": 10,
            }
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#0e0e0e",
              "flex": 9,
              "fontFamily": "telegrama_raw",
              "paddingRight": 30,
              "paddingTop": 6,
              "textAlign": "center",
            }
          }
        >
          Tom
        </Text>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#141313",
            "borderColor": "#141313",
            "borderRadius": 0,
            "borderWidth": 0.5,
            "flex": 3,
            "flexDirection": "column",
            "margin": 1,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#329932",
              "fontFamily": "telegrama_raw",
              "fontSize": 6,
              "marginLeft": 9,
              "marginTop": 15,
            }
          }
        >
          Resetting | |=-------------------------------------------------|   0% 00:16:39
        </Text>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 16,
                  "margin": 4,
                  "width": 16,
                }
              }
            />
            <Image
              source={1}
              style={
                Object {
                  "height": 16,
                  "margin": 4,
                  "width": 16,
                }
              }
            />
            <Image
              source={1}
              style={
                Object {
                  "height": 16,
                  "margin": 4,
                  "width": 16,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 16,
                  "margin": 4,
                  "width": 16,
                }
              }
            />
            <Image
              source={1}
              style={
                Object {
                  "height": 16,
                  "margin": 4,
                  "width": 16,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#329932",
                  "flex": 1,
                  "flexDirection": "row",
                  "fontFamily": "telegrama_raw",
                  "fontSize": 8,
                  "marginTop": 20,
                }
              }
            >
              Artifacts: 
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#329932",
                  "flex": 1,
                  "flexDirection": "row",
                  "fontFamily": "telegrama_raw",
                  "fontSize": 8,
                  "marginTop": 20,
                }
              }
            >
              4
              /7
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
